--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,7 +618,8 @@ header .btn:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   scroll-margin-top: 120px;
   position: relative;
   z-index: 2;
