--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,6 +323,36 @@ header h1 {
   font-size: clamp(1.2rem, 2vw, 2rem);
 }
 
+/* Header and section background images moved from inline styles */
+header {
+  background-image: url("../img/image (6).jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#about {
+  background-image: url("../img/image (1).png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#features {
+  background-image: url("../img/image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+/* Product thumbnail used in pricing cards */
+.product-thumb {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-right: 1rem;
+}
+
 header p {
   animation: slideInRight 0.8s ease-out 0.3s both;
 }
